# myriad

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs  models.rs  numerics.rs  server.rs
src/models/: channel.rs  user.rs
src/numerics/: errors.rs  replies.rs
src/server/: action.rs  action_parser.rs  server_query.rs
