[package]
name = "myriad"
version = "0.2.0"
authors = ["SplittyDev <splittydev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc-rust = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.4"
anyhow = "1.0"
thiserror = "1.0"
itertools = "0.10.0"
guard = "0.5.0"
chrono = "0.4"